# routes/tripRouter.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 const tripController = require('../controllers/tripsController');
+const acmController = require('../controllers/accommodationController');
 
 // Add a new trip
 router.post('/', tripController.addTrip);
@@ -17,5 +18,22 @@ router.put('/:id', tripController.updateTrip);
 
 // Delete a trip
 router.delete('/:id', tripController.deleteTrip);
+
+/* Accomodation routes */
+
+// Add a new accomodation
+router.post('/:id/accommodations', acmController.addAccommodation);
+
+// Get all accomodations in a trip
+router.get('/:id/accommodations', acmController.getAllAccommodationsInTrip);
+
+// Get an accomodation by ID
+router.get('/accommodations/:id', acmController.getAccommodationById);
+
+// Update an accomodation
+router.put('/accommodations/:id', acmController.updateAccommodation);
+
+// Delete an accomodation
+router.delete('/accommodations/:id', acmController.deleteAccommodation);
 
 module.exports = router;
